common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiveline-backend
  namespace: fiveline
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
    alb.ingress.kubernetes.io/success-codes: "200"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8000
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8000
          - path: /api/cart
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8000
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8000
          - path: /api/error-test
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8000
          - path: /api/slow-test
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8000
          - path: /api/health
            pathType: Exact
            backend:
              service:
                name: user-service
                port:
                  number: 8000
